# cpp_design_patterns

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
pattern_adapter/: CMakeLists.txt
pattern_adapter/include/: json_data_processor.hpp  xml_data.hpp  xml_to_json_adapter.hpp
pattern_adapter/src/: main.cpp  xml_to_json_adapter.cpp
pattern_command/: CMakeLists.txt
pattern_command/include/: counter.hpp  counter_command.hpp  decrement_command.hpp  double_command.hpp  increment_command.hpp
pattern_command/src/: counter.cpp  decrement_command.cpp  double_command.cpp  increment_command.cpp  main.cpp
pattern_singleton/: CMakeLists.txt
pattern_singleton/include/: singleton.hpp
pattern_singleton/src/: main.cpp
pattern_strategy/: CMakeLists.txt
pattern_strategy/include/: ai_bot.hpp  ai_strategy.hpp  ai_strategy_aggressive.hpp  ai_strategy_beginner.hpp  ai_strategy_passive.hpp
pattern_strategy/src/: ai_strategy_aggressive.cpp  ai_strategy_beginner.cpp  ai_strategy_passive.cpp  main.cpp  strategy.cpp
pattern_visitor/: CMakeLists.txt
pattern_visitor/include/: ball.hpp  basketball.hpp  bounce.hpp  bowlingball.hpp  inflate.hpp  soccerball.hpp
pattern_visitor/src/: main.cpp
